Upgrade test suite java version to run on > 8, upgrade kotlin version