@@ -47,13 +47,13 @@
 
   <properties>
     <kotlin.version>1.4.30</kotlin.version>
-    <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+    <kotlin.compiler.jvmTarget>11</kotlin.compiler.jvmTarget>
     <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     <junit.version>5.8.0-M1</junit.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 
-    <java.version>1.8</java.version>
+    <java.version>11</java.version>
     <maven-shade-plugin.version>3.1.1</maven-shade-plugin.version>
     <test.heap.size>2g</test.heap.size>
     <test.offheap.size>2g</test.offheap.size>
@@ -160,6 +160,16 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <compilerArgs>
+              <source>${maven.compiler.source}</source>
+              <target>${maven.compiler.target}</target>
+              <arg>--add-exports</arg>
+              <arg>java.base/java.nio=ALL-UNNAMED</arg>
+              <arg>--add-opens</arg>
+              <arg>java.base/java.nio=ALL-UNNAMED</arg>
+            </compilerArgs>
+          </configuration>
           <executions>
             <!-- Replacing default-compile as it is treated specially by maven -->
             <execution>
@@ -182,10 +192,6 @@
               <goals> <goal>testCompile</goal> </goals>
             </execution>
           </executions>
-          <configuration>
-            <source>${java.version}</source>
-            <target>${java.version}</target>
-          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
